# microurse

./: README.md  skaffold.yaml
client/: .dockerignore  .eslintrc.cjs  .prettierrc  .prettierrc.json  Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
client/src/: App.vue
client/src/assets/: main.css
client/src/components/: FeedbackContainer.vue
client/src/constants/: index.ts
client/src/views/: HomeView.vue
comments/: Cargo.toml  Dockerfile  Makefile
comments/src/: constants.rs  dtos.rs  handlers.rs  lib.rs  main.rs  models.rs  repository.rs
comments/src/dtos/: new_comment.rs
comments/src/handlers/: add.rs  fetch.rs  recv_event.rs
comments/src/models/: comment.rs  event.rs
comments/src/repository/: db.rs
event-bus/: Cargo.toml  Dockerfile  Makefile
event-bus/src/: constants.rs  handlers.rs  lib.rs  main.rs  models.rs
event-bus/src/handlers/: events.rs
infra/k8s/: client-depl.yaml  comments-depl.yaml  event-bus-depl.yaml  ingress-srv.yaml  moderation-depl.yaml  posts-depl.yaml  posts-srv.yaml  query-depl.yaml
moderation/: Cargo.toml  Dockerfile  Makefile
moderation/src/: constants.rs  handlers.rs  main.rs  models.rs
posts/: .dockerignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yaml
posts/src/: constants.rs  dtos.rs  handlers.rs  lib.rs  main.rs  models.rs
query/: Cargo.toml  Dockerfile  Makefile
query/src/: constants.rs  handlers.rs  main.rs  models.rs
query/src/handlers/: fetch.rs  recv_event.rs
query/src/models/: event.rs  post_comments.rs
query/src/repository/: db.rs
(+18 files in other folders)
